@@ -1,0 +1,1 @@
+include AUTHORS ChangeLog COPYING INSTALL NEWS TODO
